<resources>

    <string name="app_name">AIKFWSA Kung Fu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_home">Home</string>
    <string name="blank">   </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_home">Martial Arts</string>
    <string name="title_dashboard">Health Tips</string>

    <string name="Stud_registration">Student</string>
    <string name="parent_registration">Parent</string>
    <string name="Existing">Ex.Parent Add Child</string>

    <string name="Event_register">Event Registration</string>

    <string name="Event_detail">Event Registration Details</string>

    <string name="event_register_title">Event Registration</string>
    <string name="event_detail_title">Event Registration Details</string>

    <string name="stud_detail">Student Details</string>
    <string name="notification">Notification</string>
    <string name="addfees">Add Fees</string>
    <string name="feesrecord">Fees Record</string>
    <string name="attend_record">Attendance Record</string>
    <string name="bankdetail">Bank Details</string>
    <string name="training_center">Training Centers</string>
    <string name="upcoming_events">Upcoming Events</string>

    <string name="grading">Grading</string>
    <string name="camp">Camp</string>
    <string name="competition">Competition</string>
    <string name="tour">Tour</string>

    <!--<string name="Feedback">Feedback</string>-->
    <string name="EventFeedback">Event_Feedback</string>

    <string name="inbox">Inbox</string>
    <string name="event">Event</string>
    <string name="register">Registration</string>
    <string name="fees">Fees</string>

    <!--<string name="profile">Profile</string>-->
    <string name="ch_password">Change Password</string>
    <string name="timetable">Timetable</string>
    <string name="gallery">Gallery</string>
    <string name="suggestion">Suggestions</string>

    <string name="batch">Batch</string>
    <string name="individual">Individual</string>

    <string name="about_us">About Us</string>
    <string name="contact_detail">Contact Detail</string>

    <string name="photos">Photos</string>
    <string name="videos">Videos</string>

    <string name="attendance">Attendance</string>
    <string name="key_per">Key Personnel</string>

    <string name="manage">Management</string>

    <string name="dialog_title">Select Months</string>
    <string name="ok_label">OK</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">Clear all</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="fq1">The time allotted for the training was sufficient?</string>
    <string name="fq2">The training was started on time?</string>
    <string name="fq3">What have you learnt that is new to you?</string>
    <string name="fq4">What do you think of the trainer proficiency for this batch?</string>

    <string name="efq">How was the event ?</string>

    <!--drawer-->

    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="Take_Attendance">Take Attendance</string>
    <string name="Student_Details">Student Details</string>
    <string name="Send_Notification">Send Notification</string>
    <string name="Attendance_Record">Attendance Record</string>
    <string name="Bank_Details">Bank Details</string>
    <string name="Training_centers">Training Centers</string>
    <string name="Upcoming_Events">Upcoming Events</string>
    <string name="Suggestions">Suggestions</string>
    <string name="About_us">About us</string>
    <string name="Gallery">Gallery</string>
    <string name="Inbox">Inbox</string>
    <string name="Logout">Logout</string>
    <string name="Result">Result</string>
    <string name="Feedback">Feedback</string>
    <string name="Trainer_profile">Trainer profile</string>


    <string name="Registration">Registration</string>
    <string name="Event">Event</string>
    <string name="Fees">Fees</string>
    <string name="Language">Language</string>


    <!--menu-->

    <string name="slogen1">However beautiful the strategy, you should occasionally look at the results</string>
    <string name="slogen2">The more you sweat in training, the less you bleed in combat</string>
    <string name="slogen3">On the day of victory no fatigue is felt</string>
    <string name="slogen4">Legend tells of a legendary warrior whose kung fu skills were the stuff of legend</string>
    <string name="slogen5">The most powerful weapon on earth is the human soul on fire</string>
    <string name="slogen6">We may encounter many defeats but we must not be defeated</string>

    <!--textviews-->

    <string name="Select_Batch">Select Batch</string>
    <string name="Select_Month">Select Month</string>
    <string name="Select_Year">Select Year</string>
    <string name="Competition">Competition</string>
    <string name="Select_Student">Select Student</string>
    <string name="Monthly_Fees">Monthly Fees</string>
    <string name="Notification_batch">Send Notification to Batch</string>
    <string name="Select_Event">Select_Event</string>
    <string name="Registration_fees">Registration fees</string>
    <string name="Type_of_event">Type of Event</string>
    <string name="Date_of_birth">Date of Birth</string>
    <string name="Registration_date">Registration_date</string>
    <string name="gender">Gender</string>
    <string name="Belt_level">Belt Level</string>
    <string name="Fee_Record">Fee Record</string>
    <string name="Notification_Individual">Notification Individual</string>
    <string name="Upload_Photo">Pick Image</string>
    <string name="Update_photo">Update Image</string>
    <string name="Night_Mode">Night Mode</string>


    <!--hints-->
    <string name="mobile">Enter Mobile no.</string>
    <string name="password">Enter password</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="admission_fees">Admission Fees</string>
    <string name="Pass">Password</string>
    <string name="CPass">Confirm Password</string>
    <string name="Gr">Gr Number</string>
    <string name="username">username</string>
    <string name="change_language">You can change language from here !</string>


    <!--button-->
    <string name="add">Add</string>
    <string name="submit">Submit</string>
    <string name="send">Send</string>


    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="mobileerror">Enter a valid mobile</string>
    <string name="dateerror">Enter a valid date</string>
    <string name="ageerror">Enter a valid age</string>
    <string name="title_activity_maps">Map</string>


    <string name="app_name1">Android Login and Registration</string>
    <string name="hint_email">Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="namelogin">Fullname</string>

</resources>
