<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<group android:visible="false"
        android:id="@+id/menu_group">

    <item
        android:id="@+id/menu_registration"
        android:orderInCategory="100"
        android:title="@string/Registration"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_event"
        android:orderInCategory="100"
        android:title="@string/Event"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_fees"
        android:orderInCategory="100"
        android:title="@string/Fees"
        app:showAsAction="never" />


</group>

    <item
        android:id="@+id/refresh"
        android:orderInCategory="100"
        android:title=""
        app:showAsAction="always"
        android:icon="@drawable/ic_refresh"/>

    <item
        android:id="@+id/mode"
        android:orderInCategory="100"
        android:title=""
        app:showAsAction="always"
        android:icon="@drawable/ic_brightness"
        />

</menu>
