<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Addfees">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:id="@+id/fees_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#ff6d00">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addfees"
                    android:textColor="#ffffff"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    />

            </android.support.v7.widget.Toolbar>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.12"
                android:background="@android:color/black">
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_vertical"
                android:paddingLeft="15dp">

                <TextView
                    android:layout_width="152dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/Select_Batch"
                    android:textSize="16sp" />

                <Spinner
                    android:layout_width="152dp"
                    android:layout_height="40dp"
                    android:id="@+id/spinner1"
                    android:spinnerMode="dialog">

                </Spinner>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.12"
                android:background="@android:color/black">
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_vertical"
                android:paddingLeft="15dp">

                <TextView
                    android:layout_width="152dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/Select_Student"

                    android:textSize="16sp" />

                <Spinner
                    android:layout_width="152dp"
                    android:layout_height="40dp"
                    android:id="@+id/spinner2"
                    android:spinnerMode="dialog">

                </Spinner>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.12"
                android:background="@android:color/black">
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_vertical"
                android:paddingLeft="15dp">

                <TextView
                    android:layout_width="152dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/Monthly_Fees"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="152dp"
                    android:layout_height="40dp"
                    android:background="@null"
                    android:gravity="center"
                    android:inputType="number"
                    android:hint="@string/Monthly_Fees"
                    android:id="@+id/get_fees"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.12"
                android:background="@android:color/black">
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_vertical"
                android:paddingLeft="15dp">

                <Button
                    android:layout_width="152dp"
                    android:layout_height="40dp"
                    android:id="@+id/select_mnth_btn"
                    android:gravity="center"
                    android:text="@string/Select_Month"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="152dp"
                    android:layout_height="40dp"
                    android:id="@+id/select_month_tvw"
                    android:gravity="center"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.12"
                android:background="@android:color/black">
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_vertical"
                android:paddingLeft="15dp">

                <Button
                    android:layout_width="152dp"
                    android:layout_height="40dp"
                    android:id="@+id/select_yr_btn"
                    android:gravity="center"
                    android:text="@string/Select_Year"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="152dp"
                    android:layout_height="40dp"
                    android:id="@+id/select_yr_tvw"
                    android:gravity="center"
                    android:textSize="16sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_vertical"
                >

                <Button
                    android:id="@+id/add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#ff6d00"
                    android:backgroundTintMode="src_in"
                    android:layout_marginLeft="140dp"
                    android:text="@string/add"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

        <ListView
            android:id="@+id/list_fees"
            android:layout_width="match_parent"
            android:layout_height="460dp"
            android:layout_below="@id/fees_card"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp" />


    </RelativeLayout>


    </ScrollView>


</FrameLayout>