<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="#fcfcfc"
            android:gravity="center"
            android:id="@+id/ll">

            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:id="@+id/key_personel"
                    android:layout_width="350dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/circlebackpurple"
                            android:src="@drawable/ic_key_personnel"
                            android:padding="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:text="@string/key_per"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            android:layout_margin="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="14dp"
                            android:text="@string/slogen4"
                            android:padding="5dp"
                            android:textColor="@android:color/darker_gray"/>

                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="350dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                    android:id="@+id/management">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/circlebackyellow"
                            android:src="@drawable/ic_management"
                            android:padding="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:text="@string/manage"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            android:layout_margin="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="14dp"
                            android:text="@string/slogen5"
                            android:padding="5dp"
                            android:textColor="@android:color/darker_gray"/>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.CardView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="350dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                    android:id="@+id/about_us_card1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/circleshape"
                            android:src="@drawable/ic_info_outline"
                            android:padding="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:text="@string/About_us"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            android:layout_margin="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/slogen6"
                            android:padding="5dp"
                            android:textSize="14dp"
                            android:textColor="@android:color/darker_gray"/>

                    </LinearLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>